--- a/freecodecamphtml.html
+++ b/freecodecamphtml.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en"> <!--lang="en" here just tells that it is in english language -->
   <head>
     
     <title>CatPhotoApp</title>
@@ -10,7 +10,7 @@
       <h1>CatPhotoApp</h1>
       <section>
         <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
+        <!-- _blank here opens the link in a new browser/tab;  -->
         <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
         <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
       </section>
@@ -43,6 +43,7 @@
           <fieldset>
             <legend>Is your cat an indoor or outdoor cat?</legend>
             <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
+            <!-- 'checked' at the end just shows taht this radio button is checked in the live server -->
             <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
           </fieldset>
           <fieldset>
@@ -52,6 +53,7 @@
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <!-- 'required' makes this input a requirement-->
           <button type="submit">Submit</button>
         </form>
       </section>
