--- a/Cat Photo App.html
+++ b/Cat Photo App.html
@@ -2,7 +2,7 @@
 
 <html lang="en"> <!--lang="en" here just tells that it is in english language -->
   <head>
-    
+    <meta charset="utf-8">
     <title>CatPhotoApp</title>
   </head>
   <body>
