--- a/Registration Form.html
+++ b/Registration Form.html
@@ -13,9 +13,15 @@
     <form method="post" action='https://register-demo.freecodecamp.org'>
       <fieldset>
         <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required /></label>
+        <!--for and id attributes are related-->
+
         <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
+
         <label for="email">Enter Your Email: <input id="email" name="email" type="email" required /></label>
+        <!--type="email" only accepts input with @ and .; I think this has built-in verification-->
+
         <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required /></label>
+        <!--pattern here just says the input accepts a-z and 0-5 with 8 min. chars.-->
       </fieldset>
 
       <fieldset>
@@ -28,6 +34,7 @@
         <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" name="file" /></label>
 
         <label for="age">Input your age (years): <input id="age" type="number" name="age" min="13" max="120" /></label>
+        <!--min and max here are the required age inputs maxed out at 120-->
 
         <label for="referrer">How did you hear about us?
           <select id="referrer" name="referrer">
@@ -41,6 +48,7 @@
 
         <label for="bio">Provide a bio:
           <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
+          <!--rows and cols here just increases the textbox-->
         </label>
 
       </fieldset>
@@ -51,6 +59,6 @@
 
       <input type="submit" value="Submit" />
     </form>
-    
+
   </body>
 </html>
