FCC: Building a Piano (Third Commit)
I added some :active pseudo-class for .keys. I also changed the logo.

--- a/Piano.html
+++ b/Piano.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="piano">
-      <img class="logo" src="Images/piano.png" alt="freeCodeCamp Logo" />
+      <img class="logo" src="Images/Piano.jpg" alt="freeCodeCamp Logo" />
 
       <div class="keys">
         <div class="key"></div>
