--- a/Basic CSS.html
+++ b/Basic CSS.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--This meta line makes the preview accommodate to the device from where it is being shown-->
     <title>Cafe Menu</title>
-    <link href="Coffee Shop Menu.css" rel="stylesheet"/>
+    <link href="./Basic CSS.css" rel="stylesheet"/>
     <!--href from this link element links to the css-->
   </head>
 
