--- a/CSS Variables.html
+++ b/CSS Variables.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>City Skyline</title>
-    <link href="./City Skyline.css" rel="stylesheet" />
+    <link href="./CSS Variables.css" rel="stylesheet" />
   </head>
 
   <body>
