--- a/Certification Projects (FCC)/Survey Form.html
+++ b/Certification Projects (FCC)/Survey Form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Programmer Information</title>
-    <link rel="stylesheet" href="Programming Info.css">
+    <link rel="stylesheet" href="./Survey Form.css">
   </head>
   <body>
     <h1 id="title">Programmer Information</h1>
