--- a/CSS Psuedo Selectors.html
+++ b/CSS Psuedo Selectors.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance Sheet</title>
-    <link rel="stylesheet" href="./Balance Sheet.css">
+    <link rel="stylesheet" href="./CSS Pseudo Selectors.css">
   </head>
 
   <body>
