--- a/Intermediate CSS.html
+++ b/Intermediate CSS.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>fCC Cat Painting</title>
-    <link rel="stylesheet" href="./Cat Painting.css">
+    <link rel="stylesheet" href="./Intermediate CSS.css">
 </head>
 
 <body>
