--- a/Responsive Web Design.html
+++ b/Responsive Web Design.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Jigs' Piano</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Piano.css">
+    <link rel="stylesheet" href="./Responsive Web Design.css">
   </head>
 
   <body>
