--- a/Typography.html
+++ b/Typography.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Nutrition Label</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
-  <link href="Nutrition Label.css" rel="stylesheet">
+  <link href="./Typography.css" rel="stylesheet">
 </head>
 
 <body>
